[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/splitting_shape/SplittingShape.gd" type="Script" id=1]

[node name="SplittingShape" type="Node2D"]
script = ExtResource( 1 )

[node name="ShapePoly" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 0, 0, 0, 384, 384, 384, 384, 0 )

[node name="SplittingPoly" type="Polygon2D" parent="."]
position = Vector2( 32, 0 )
polygon = PoolVector2Array( 32, 416, 96.01, 352, 64, 224, 224.01, 288, 320, 224, 320.01, 352, 352, 448, 224.01, 352, 224.01, 448, 160.01, 352 )
